--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -82,6 +82,7 @@
 "crypto-recipient-found" = "Adressaat leitud";
 "crypto-recipients-found" = "%@ adressaati leitud";
 "crypto-recipient-added" = "Adressaat lisatud";
+"crypto-recipients-added" = "Adressaadid lisatud";
 "crypto-recipient-removed" = "Adressaat eemaldatud";
 "crypto-recipient-adding-cancelled" = "Adressaadi lisamine katkestatud";
 "crypto-no-addressees-warning" = "Ühtegi adressaati ei ole lisatud";
@@ -94,6 +95,7 @@
 "crypto-add-addressee-button-title" = "LISA";
 "crypto-add-addressee-button-title-accessibility" = "LISA ADRESSAAT";
 "crypto-addressee-added-button-title" = "LISATUD";
+"crypto-addressee-add-all-button" = "LISA KÕIK";
 "crypto-remove-addressee-button" = "Eemalda adressaat";
 "crypto-invalid-personal-code-title" = "Isikukood pole korrektne!";
 
