--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -70,6 +70,7 @@
 "signing-recent-containers" = "Hiljutised dokumendid";
 
 // Crypto
+"crypto-header-files-title" = "Ümbriku failid";
 "crypto-view-begin-label" = "Krüpteerimiseks või dekrüpteerimiseks vali fail";
 "crypto-view-begin-label-accessibility" = "Vali fail krüpteerimiseks või dekrüpteerimiseks";
 "crypto-view-begin-button" = "VALI FAIL";
@@ -97,6 +98,7 @@
 "crypto-addressee-added-button-title" = "LISATUD";
 "crypto-addressee-add-all-button" = "LISA KÕIK";
 "crypto-remove-addressee-button" = "Eemalda adressaat";
+"crypto-encrypted-files-title" = "Krüpteeritud failid";
 "crypto-invalid-personal-code-title" = "Isikukood pole korrektne!";
 
 // Crashlytics
