Improved maximum text size design (#349)

--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -76,6 +76,7 @@
 "crypto-encryption-error-text" = "Что-то пошло не так с шифрованием";
 "crypto-encryption-success" = "ШИФРОВАНИЕ УДАЛОСЬ";
 "crypto-decryption-cancelled" = "Расшифровка файла прервана";
+"crypto-recipient-search" = "Искать";
 "crypto-recipient-found" = "Получатель найден";
 "crypto-recipients-found" = "%@ получатели найдены";
 "crypto-recipient-added" = "Получатель добавлен";
