--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -361,9 +361,10 @@
 "diagnostics-one-time-logging-read-more" = "Подробнее читайте здесь";
 "diagnostics-app-version" = "Версия приложения";
 "diagnostics-ios-version" = "Операционная система";
-"diagnostics-libraries-label" = "Библиотеки";
+"diagnostics-libraries-label" = "Библиотеки:";
 "diagnostics-rpuuid-default" = "назначено по умолчанию";
 "diagnostics-rpuuid-custom" = "назначено вручную";
+"diagnostics-tsl-cache-label" = "TSL кеш:";
 "about-title" = "Информация";
 "jailbreak-message" = "Данное приложение не может быть использовано на взломанном (джейлбрейк) устройстве";
 "datafile-preview-failed" = "Не удалось открыть документ для предварительного просмотра";
