Added TSA cert pinning (#354)

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -353,6 +353,11 @@
 "settings-timestamp-url-placeholder" = "";
 "settings-timestamp-use-default-title" = "Use default";
 "settings-value-changed" = "Setting value changed";
+"settings-timestamp-cert-title" = "Time-Stamping service SSL certificate";
+"settings-timestamp-cert-issued-to-label" = "Issued to:";
+"settings-timestamp-cert-valid-to-label" = "Valid to:";
+"settings-timestamp-cert-add-certificate-button" = "ADD CERTIFICATE";
+"settings-timestamp-cert-show-certificate-button" = "SHOW CERTIFICATE";
 "diagnostics-title" = "Diagnostics";
 "diagnostics-activate-one-time-logging" = "Enable one-time log generation";
 "diagnostics-save-log" = "SAVE LOG";
