--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -464,3 +464,14 @@
 "voice-control-tab-my-eid" = "My EID";
 "voice-control-tab-crypto" = "Crypto";
 "voice-control-tab-signature" = "Signature";
+"voice-control-close" = "Close";
+"voice-control-search" = "Search";
+"voice-control-row" = "Row";
+"voice-control-signing-service" = "Signing service";
+"voice-control-timestamping-service" = "TimeStamping service";
+"voice-control-enable-log-generation" = "Enable log generation";
+"voice-control-disable-log-generation" = "Disable log generation";
+"voice-control-estonian-language" = "Estonian language";
+"voice-control-english-language" = "English language";
+"voice-control-russian-language" = "Russian language";
+"voice-control-clear-text" = "Clear text";
