Show TSL's in Diagnostic view (#376)

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -368,6 +368,7 @@
 "diagnostics-libraries-label" = "Libraries:";
 "diagnostics-rpuuid-default" = "is set by default";
 "diagnostics-rpuuid-custom" = "is set manually";
+"diagnostics-tsl-cache-label" = "TSL cache:";
 "about-title" = "Info";
 "jailbreak-message" = "This app cannot be used in jailbroken device";
 "datafile-preview-failed" = "Error opening document for preview";
