--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -366,9 +366,10 @@
 "diagnostics-one-time-logging-read-more" = "Loe täpsemalt siit";
 "diagnostics-app-version" = "Rakenduse versioon";
 "diagnostics-ios-version" = "Operatsioonisüsteem";
-"diagnostics-libraries-label" = "Teegid";
+"diagnostics-libraries-label" = "Teegid:";
 "diagnostics-rpuuid-default" = "vaikimisi määratud";
 "diagnostics-rpuuid-custom" = "käsitsi määratud";
+"diagnostics-tsl-cache-label" = "TSL puhver:";
 "about-title" = "Info";
 "jailbreak-message" = "Seda rakendust ei saa kasutada turvamata (ingl jailbroken) seadmes";
 "datafile-preview-failed" = "Faili avamine eelvaateks ebaõnnestus";
