Added signature warnings info (#352)

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -172,6 +172,14 @@
 "container-timestamp-unknown" = "Timestamp is unknown";
 "container-timestamp-invalid" = "Timestamp is not valid";
 
+"container-signature-status-reason-title" = "Warnings";
+"container-signature-status-invalid-reason" = "This is an invalid signature or malformed digitally signed file. The signature is not valid.";
+"container-signature-status-warning-reason-weak" = "The signature is technically correct, but it is based on the currently weak hash algorithm SHA-1, therefore it is not protected against forgery or alteration.";
+"container-signature-status-warning-reason" = "The signature is valid, but the container has a specific feature. Usually, this feature has arisen accidentally when containers were created. However, as it is not possible to edit a container without invalidating the signature, a warning is displayed.\nAdditional information: https://www.id.ee/en/article/digital-signing-and-electronic-signatures/";
+"container-signature-status-nonqscd-reason" = "This e-Signature is not equivalent with handwritten signature and therefore can be used only in transactions where Qualified e-Signature is not required.";
+"container-signature-status-unknown-reason" = "Signature status is displayed \"unknown\" if you don't have all validity confirmation service certificates and/or certificate authority certificates installed into your computer.\nAdditional information: https://www.id.ee/en/article/digidoc4-client-error-ocsp-responder-is-not-trusted-no-certificate-for-this-responder-in-local-certstore";
+"container-signature-technical-information-button" = "TECHNICAL INFORMATION";
+
 // *** Mobile ID Challenge View ***
 
 "challenge-code-label" = "%@";
