--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -269,7 +269,7 @@
 "signing-aborted-message" = "Процесс подписания прерван";
 "my-eid-status-reader-not-found" = "Подключите считыватель карты и вставьте в него Вашу ID-карту.";
 "my-eid-status-card-not-found" = "Обнаружен считыватель карты.\nВставьте в него Вашу ID-карту.";
-"my-eid-status-requesting-data" = "Загрузка данных с ID карты.\`n`Это может занять до 1 минуты...";
+"my-eid-status-requesting-data" = "Загрузка данных с ID карты.\nЭто может занять до 1 минуты...";
 "my-eid-cert-expired" = "недействителен";
 "my-eid-cert-valid" = "действителен";
 "my-eid-info-item-given-names" = "ИМЯ";
