--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -381,6 +381,7 @@
 "about-title" = "Информация";
 "jailbreak-message" = "Данное приложение не может быть использовано на взломанном (джейлбрейк) устройстве";
 "datafile-preview-failed" = "Не удалось открыть документ для предварительного просмотра";
+"datafile-preview-not-available" = "Файл с таким расширением не может быть открыт в RIA DigiDoc похоже. Загрузите файл, чтобы просмотреть его.";
 "central-configuration" = "Центральная конфигурация:";
 "last-update-check" = "ПОСЛЕДНЯЯ ПРОВЕРКА:";
 "update-date" = "ДАТА ОБНОВЛЕНИЯ:";
