--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -380,6 +380,7 @@
 "about-title" = "Info";
 "jailbreak-message" = "This app cannot be used in jailbroken device";
 "datafile-preview-failed" = "Error opening document for preview";
+"datafile-preview-not-available" = "A file with this extension cannot be opened in RIA DigiDoc application. Download the file to view it.";
 "central-configuration" = "Central configuration:";
 "last-update-check" = "LAST CHECK:";
 "update-date" = "UPDATE DATE:";
