--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -230,6 +230,8 @@
 "smart-id-country-latvia" = "Latvia";
 "smart-id-challenge-title" = "Sign with Smart-ID";
 "smart-id-sign-help-title" = "Make sure control code matches with one in phone screen and enter Smart-ID PIN2 code";
+"nfc-title" = "Enter your card access number and PIN 2 to sign with ID-card";
+"nfc-can-title" = "Card access number";
 "role-and-address" = "Role and address";
 "role-and-address-title" = "Enter your role and address info";
 "role-and-address-role-title" = "Role / resolution";
@@ -253,6 +255,7 @@
 "sign-title-mobile-id" = "Mobile-ID";
 "sign-title-smart-id" = "Smart-ID";
 "sign-title-id-card" = "ID-Card";
+"sign-title-nfc" = "NFC";
 "card-reader-state-initial" = "Connect the card reader and insert your ID-card into the reader.";
 "card-reader-state-reader-not-found" = "No card readers found";
 "card-reader-state-reader-restarted" = "Restarting card reader.";
