--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -59,6 +59,7 @@
 "signature-view-begin-label-accessibility" = "Choose a file to sign or validate";
 "signature-view-begin-button" = "CHOOSE FILE";
 "signature-details-title" = "Signature details";
+"timestamp-details-title" = "Timestamp details";
 "certificate-details-title" = "Certificate details";
 "menu-button" = "Menu";
 
