--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -59,6 +59,7 @@
 "signature-view-begin-label-accessibility" = "Vali fail allkirjastamiseks või kontrollimiseks";
 "signature-view-begin-button" = "VALI FAIL";
 "signature-details-title" = "Allkirja detailid";
+"timestamp-details-title" = "Ajatempli detailid";
 "certificate-details-title" = "Sertifikaadi detailid";
 "menu-button" = "Menüü";
 
