--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -520,3 +520,4 @@
 "voice-control-role-state" = "State";
 "voice-control-role-country" = "Country";
 "voice-control-role-zip" = "Zip";
+"voice-control-role-and-address" = "Role and address";
