--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -462,6 +462,7 @@
 
 // ** Accessibility introduction **
 "accessibility-introduction-title" = "Доступность";
+"accessibility-link" = "Более подробную информацию можно найти тут: https://www.id.ee/ligipaasetavuse-teatis/.";
 "accessibility-introduction" = "Приложение RIA DigiDoc построено таким образом, чтобы оно соответствовало протоколам доступа WCAG 2.1 AA. Это означает, что при разработке RIA DigiDoc соблюдались принципы, позволяющие использовать приложение неспособным видеть и слабовидящим пользователям, лицам с ограничением двигательной функции или силы и т. п.";
 "accessibility-introduction-2" = "Доступность можно исправить путём использования встроенных в смарт-устройство вспомогательных средств. Далее даётся обзор основных вспомогательных средств.";
 "accessibility-introduction-screen-reader-header" = "Экранное считывающее устройство ";
