--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -174,6 +174,7 @@
 "container-timestamp-valid" = "Ajatempel on kehtiv";
 "container-timestamp-unknown" = "Ajatempel on teadmata";
 "container-timestamp-invalid" = "Ajatempel ei ole kehtiv";
+"container-asics-warning" = "Tegemist on XADES allkirja sisalduva ASICS ümbrikuga. Sellele ümbrikule ei saa allkirja lisada ega eemaldada.";
 
 "container-signature-status-reason-title" = "Hoiatused";
 "container-signature-status-invalid-reason" = "See allkiri või allkirjastatud fail on vigane. Allkiri ei ole kehtiv.";
