--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -174,6 +174,7 @@
 "container-timestamp-valid" = "Временной штамп действителен";
 "container-timestamp-unknown" = "Временной штамп неизвестный";
 "container-timestamp-invalid" = "Временной штамп недействителен";
+"container-asics-warning" = "Речь идет о конверте ASICS, содержащемся в подписи XADES. К данному контейнеру нельзя добавить или удалить из него подпись.";
 
 "container-signature-status-reason-title" = "Предупреждения";
 "container-signature-status-invalid-reason" = "Повреждена подпись или подписанный файл. Данная подпись недействительна.";
